2000-06-09   Daiki Ueno  <ueno@unixuser.org>

	* mime-edit.el (mime-edit-insert-key): Insert a text tag when
	the buffer has any trailing text.

2000-06-05  Shugo Maeda <shugo@ruby-lang.org>

	* pgg-gpg.el (pgg-scheme-insert-key): Don't quote user id.

2000-05-25  Tanaka Akira      <akr@m17n.org>

        * README.en: Update for CVS via SSH.

2000-05-21   Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-process-region): Abolish redundant nconc.

2000-05-16   Daiki Ueno  <ueno@unixuser.org>

	* mime-image.el (mime-image-create) [XEmacs]: Don't call
	`make-image-instance' directly.

2000-05-02   Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-scheme-encrypt-region): Don't quote recipient;
	concatenate all arguments destructively.

2000-04-13   Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el: Fix author's mailing address.
	(pgg-gpg-process-region): Add --output option; set status fd to 2.
	(pgg-gpg-possibly-cache-passphrase): New function.
	(pgg-gpg-shell-file-name): Abolish.
	(pgg-gpg-shell-command-switch): Abolish.
	(pgg-scheme-lookup-key): Work on temp buffer.

2000-03-01  Yoshiki Hayashi <yoshiki@xemacs.org>

	* mime-image.el (mime-display-image): Don't wait for redisplay.

2000-02-23   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* mime-image.el
	(mime-image-normalize-xbm-buffer): New inline function.
	(mime-image-create) [XEmacs || Emacs21]: Use it for XBM data.
	(mime-display-image): Don't create temporary file.

2000-02-21   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* semi-def.el (mime-user-interface-product): Bump up to
	EMIKO 1.13.12.

	* pgg.el (pgg-temp-buffer-show-function): Use
	`shrink-window-if-larger-than-buffer'.

	* pgg-gpg.el (pgg-gpg-process-region): Fix cleanup form.

	* pgg-pgp.el (pgg-pgp-process-region): Ditto.

	* pgg-pgp5.el (pgg-pgp5-process-region): Ditto.

	* semi-setup.el (mime-setup-enable-inline-image): Remove checking
	of bitmap-mule; use `eval-after-load' instead of
	`call-after-loaded' to require `mime-image'.
