@@ -1,3 +1,8 @@
+2000-06-27   Daiki Ueno  <ueno@unixuser.org>
+
+	* mime-image.el (mime-image-insert): Synch with the latest image.el.
+	(mime-display-image): Don't pass underlying string "x".
+
 2000-06-09   Daiki Ueno  <ueno@unixuser.org>
 
 	* mime-edit.el (mime-edit-insert-key): Insert a text tag when
